# msgfleet-auth-service

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: d68eebeac2d0_.py  f7b37512bd53_.py
scripts/: dev.py
secrets/app/: .env.dist  .service-urls.env.dist
secrets/app/app/: .env.dist
secrets/app/base/: .env.dist
secrets/app/db/: .env.dist
secrets/auth/: .env.dist
src/auth_service/api/: router.py
src/auth_service/api/dto/: parameters.py  responses.py
src/auth_service/app/: loader.py  main.py
src/auth_service/app/api/: router.py
src/auth_service/app/api/dto/: parameters.py
src/auth_service/app/dependencies/: __init__.py  clients.py  db.py
src/auth_service/config/: app.py  base.py  clients.py  db.py  logging.py  settings.py
src/auth_service/core/clients/: users.py
src/auth_service/core/flows/: app.py
src/auth_service/core/queries/: auth.py
src/auth_service/domain/models/: enums.py  models.py
src/auth_service/infrastructure/: logging.py
src/auth_service/infrastructure/clients/: setup.py
src/auth_service/infrastructure/db/: models.py  setup.py
src/auth_service/services/dependencies/: __init__.py  http.py
src/auth_service/services/flows/: _flows.py
src/auth_service/services/http/: __init__.py
src/auth_service/services/queries/: __init__.py
src/auth_service/utils/: auth.py  log_setup.py  session.py
src/auth_service/utils/clients/: http_client.py
src/auth_service/utils/dto/: __init__.py  schemas.py
src/auth_service/utils/http/: http_client.py
src/shared/auth/: settings.py
(+12 files in other folders)
