[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Fazliddin Abdurahimov",email = "fazliddin1801@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "alembic-postgresql-enum (>=1.7.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "cryptography (>=45.0.2,<46.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "auth_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "scripts.dev:main"
